--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/line-clamp": "^0.3.1",
     "gatsby": "^4.8.0",
+    "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-sass": "^5.8.0",
+    "gatsby-plugin-sharp": "^4.8.0",
     "gatsby-source-contentful": "^7.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
