eslint, prettier and vs code srtting updated

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "arrowParens": "avoid",
-  "semi": true
+  "semi": true,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
