--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "autoprefixer": "^10.4.2",
+    "gatsby-plugin-postcss": "^5.8.0",
+    "postcss": "^8.4.7",
+    "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23"
   },
   "keywords": [
     "gatsby"
